--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@
 - [ ] limit text length
 - [ ] 'y' for setting single-mode
 - [ ] consider what to do with strings that cut off (trailing '...'?)
+- [ ] show a simple 'now playing' with song metadata + current / total time
+- [ ] consistency with cursor scroll offset between top and bottom of long list (or just scrolloffset logic in general)
