--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 - [ ] add track length to song list
 - [ ] '/' search
-- [ ] artist (and general, probably) sorting puts lowercase after uppercase
 - [ ] 'y' for setting single-mode
 - [ ] consider what to do with strings that cut off (trailing '...'?)
 - [ ] show a simple 'now playing' with song metadata + current / total time
 
+- [x] artist (and general, probably) sorting puts lowercase after uppercase
 - [x] 'o' to to go to currently playing track
 - [x] sort albums by date
 - [x] preload all of the songs/albums
