--- a/TODO
+++ b/TODO
@@ -1,23 +1,6 @@
+- [ ] `<`/`>` might kill the application sometimes??
 - [ ] add track length to song list
 - [ ] '/' search
 - [ ] 'y' for setting single-mode
 - [ ] consider what to do with strings that cut off (trailing '...'?)
-- [ ] show a simple 'now playing' with song metadata + current / total time
-- [ ] All That Remains - Overcome missing?
-- [ ] library + queue key input loop: figure out good way to break out of loop once valid key is pressed/found
 - [ ] consider putting into idle mode if key hasn't been pressed for X frames
-- [ ] consider this in ncmpcpp's status.cpp:
-    ```
-	// Set TCP_NODELAY on the tcp socket as we are using write-write-read pattern
-	// a lot (noidle - write, command - write, then read the result of command),
-	// which kills the performance.
-	int flag = 1;
-	setsockopt(Mpd.GetFD(), IPPROTO_TCP, TCP_NODELAY, &flag, sizeof(flag));
-    ```
-
-- [x] artist (and general, probably) sorting puts lowercase after uppercase
-- [x] 'o' to to go to currently playing track
-- [x] sort albums by date
-- [x] preload all of the songs/albums
-- [x] limit text length
-- [x] consistency with cursor scroll offset between top and bottom of long list (or just scrolloffset logic in general)
