--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- [ ] investgate duration being pushed off screen
 - [ ] `<`/`>` might kill the application sometimes??
 - [ ] add track length to song list
 - [ ] '/' search
