--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- [ ] some album covers can be saved as thumbnails at 300x but not 200x
+    -   calculation issue on the height? try printing stb error
 - [ ] ask about proper way of getting font width (font.em_width vs. my font.w_width hack)
     -   expected width may stil sometimes be wrong
 - [ ] `<`/`>` might kill the application sometimes??
