--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- [ ] josiah resizing a lot resulted in core dump
 - [ ] some album covers can be saved as thumbnails at 300x but not 200x
     -   calculation issue on the height? try printing stb error
 - [ ] ask about proper way of getting font width (font.em_width vs. my font.w_width hack)
