--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 - [ ] ask about proper way of getting font width (font.em_width vs. my font.w_width hack)
     -   expected width may stil sometimes be wrong
-- [ ] `<`/`>` might kill the application sometimes??
-- [ ] '/' search
+- [ ] `<` and `>` might kill the application sometimes??
 - [ ] 'y' for setting single-mode
 
 'memory leak' measurements
